2005-02-10 00:08 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridRemoveTwoFaceCell) refactored the parallel
	ghost node checks to make sure that faces will be present for
	manipuations (add and delete) and cost validity checks. improved
	error messages.

2005-02-08 22:10 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapEdge) added gridNodeGhost checks on edge
	nodes. Note that these checks are redundant with
	gridmpi:gridParallelEdgeSwap, I added them to help me think
	parallel.

2005-02-08 21:45 Mike Park  <mike.park@nasa.gov>

	* src/gridswap.c (gridSwapFace) abort face swap if top and bottom
	nodes are frozen to protect frozen mesh edges.

2005-02-08 20:43 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridSmoothNodeFaceAreaUVSimplex) bug fix to
	prevent a subsequent smoothing operation from creating negative
	elements. (smoothing requires consistant node VU and XYZ). Added a
	CAD parameter evalutation at the completion of the simplex search
	to update the node XYZ and make it consistant with final simplex
	UV value.

2005-02-08 11:17 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV,gridLinearProgramXYZ) added a
	callAgain argument to suggest if a subsequent call would continue
	to improve the mesh.
	* src/gridcad.c (gridSmoothNode) keep calling the LinearProgram
	routines until the callAgain argument ins FALSE.

2005-02-07 15:53 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridNodeProjectionDisplacement) replaced edge and
	face projections with evaluations to fix the om6 test case. For
	some reason two neighboring nodes where projected to the same xyz
	location (to 8 digits). This needs to be cleaned up and renamed.

2005-02-07 14:07 Mike Park  <mike.park@nasa.gov>

	* src/gridcad.c (gridLinearProgramUV) Put in constraint checks that
	will not allow the optimization to reduce gridNodeAR below
	gridOPTIM_COST_FLOOR.
	* src/gridcad.c (gridSmoothNode) changed if-then constant to turn